--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.7.48",
     "axios": "^0.18.0",
+    "chart.js": "^2.8.0",
     "uikit": "^3.0.3",
     "vue": "^2.6.6",
+    "vue-chartjs": "^3.4.0",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
