--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.7.48",
+    "@types/yaml": "^1.0.2",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
+    "firebase": "^5.9.3",
     "uikit": "^3.0.3",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.4.0",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "yaml": "^1.4.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/node": "^11.13.2",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
