--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@types/chart.js": "^2.7.48",
+    "@types/leaflet": "^1.4.3",
     "@types/yaml": "^1.0.2",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "firebase": "^5.9.3",
+    "leaflet": "^1.4.0",
     "pikaday": "^1.8.0",
     "uikit": "^3.0.3",
     "vue": "^2.6.6",
