--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/chart.js": "^2.7.48",
-    "@types/leaflet": "^1.4.3",
-    "@types/yaml": "^1.0.2",
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
     "firebase": "^5.9.3",
@@ -22,19 +19,21 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-template-compiler": "^2.5.21",
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.7.48",
+    "@types/leaflet": "^1.4.3",
     "@types/node": "^11.13.4",
     "@types/pikaday": "^1.7.4",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.8.0",
-    "fibers": "^3.1.1",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "typescript": "^3.0.0"
   },
   "postcss": {
     "plugins": {
