--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -31,9 +31,21 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.8.0",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-vue": "^5.2.3",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.0.0"
+    "typescript": "^3.0.0",
+    "typescript-eslint-parser": "^22.0.0",
+    "vue-eslint-parser": "^6.0.4"
   },
   "postcss": {
     "plugins": {
