--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/leaflet": "^1.4.3",
     "@types/node": "^11.13.4",
     "@types/pikaday": "^1.7.4",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-service": "^3.8.0",
