--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "scan": "sonar-scanner"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -45,6 +46,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
+    "sonar-scanner": "^3.1.0",
     "typescript": "^3.0.0",
     "typescript-eslint-parser": "^22.0.0",
     "vue-eslint-parser": "^6.0.4"
