--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.21",
     "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
